==> lahirunirmalx/MobaTools/src/utilities/MoToServo.cpp <==
#define COMPILING_MOTOSERVO_CPP  // this allows servo-specific defines in includefiles
#define debugPrint
#include <MobaTools.h>

void IRAM_ATTR ISR_Servo( void *arg ) {
    servoData_t *_servoData = static_cast<servoData_t *>(arg);
	// On ESP32 the IRQ fires at start AND end of the pulse, ignore leading edge
	if ( digitalRead( _servoData->pin) == HIGH ) return ;
    portENTER_CRITICAL_ISR(&servoMux);
    SET_TP2;
    if ( _servoData->ist != _servoData->soll ) {
        //SET_TP1;
        _servoData->offcnt = OFF_COUNT;
        if ( _servoData->ist > _servoData->soll ) {
            _servoData->ist -= _servoData->inc;
            if ( _servoData->ist < _servoData->soll ) _servoData->ist = _servoData->soll;
        } else {
            _servoData->ist += _servoData->inc;
            if ( _servoData->ist > _servoData->soll ) _servoData->ist = _servoData->soll;
        }
        //CLR_TP1;
        //Serial.println(_servoData->ist );
            servoWrite( _servoData, _servoData->ist/INC_PER_TIC ); 
        //SET_TP1;
        //CLR_TP1;
    } else if ( !_servoData->noAutoff ) { // no change in pulse length, look for autooff
        if ( --_servoData->offcnt == 0 ) {
            SET_TP3;
            servoPulseOff( _servoData );
            //CLR_TP3;
        }
    }
    portEXIT_CRITICAL_ISR(&servoMux);
    CLR_TP2;
}

void ISR_Servo( void) {
    // uint16_t OCRxA = 0; -> This is a generelly only a variable now. Timer compare reg is set at end of IRQ
	// for all processors
#endif
    //SET_TP2;
    //CLR_TP4;
    // Timer1 Compare A, used for servo motor
	actEdgeTime = edgeTime; // We are in the IRQ of tha last set edgetime
    if ( IrqType == POFF ) { // Pulse OFF time
        //SET_TP2; // Oszimessung Dauer der ISR-Routine OFF
        //SET_TP3; // Oszimessung Dauer der ISR-Routine
        IrqType = PON ; // it's (nearly) always alternating
        // switch off previous started pulse
        #ifdef FAST_PORTWRT
        *stopPulseP->portAdr &= ~stopPulseP->bitMask;
        #else
        digitalWrite( stopPulseP->pin, LOW );
        #endif
        if ( nextPulseLength > 0 ) {
            // there is a next pulse to start, compute starttime 
            // set OCR value to next starttime ( = endtime of running pulse -overlap )
            // next starttime must behind actual timervalue and endtime of next pulse must
            // lay after endtime of runningpuls + safetymargin (it may be necessary to start
            // another pulse between these 2 ends)
            servoCmp_t tmpTCNT1 = actEdgeTime + MARGINTICS;// /2; // min time between two edges ( = min time between IRQ's )
            //CLR_TP3 ;
            //edgeTime = max ( (long)((long)activePulseOff + (long) MARGINTICS - (long) nextPulseLength), tmpTCNT1 );
			if ( nextPulseLength > activePulseOff +  2*MARGINTICS ) edgeTime = tmpTCNT1;
            else edgeTime = max ( (activePulseOff +  2*MARGINTICS -  nextPulseLength), tmpTCNT1 ); //V3
        } else {
            // we are at the end, no need to start another pulse in this cycle
            if ( activePulseOff ) {
                // there is still a running pulse to stop
                //SET_TP1; // Oszimessung Dauer der ISR-Routine
                edgeTime = activePulseOff;
                IrqType = POFF;
                stopPulseP = activePulseP;
                activePulseOff = 0;
                //CLR_TP1; // Oszimessung Dauer der ISR-Routine
            } else { // was last pulse, start over
				//SET_TP2;
                pulseP = lastServoDataP;
                nextPulseLength = 0;
				if ( (actEdgeTime+MARGINTICS) > servoCycleTics ) {
					// we are longer than 20ms
					servoCycleStart += actEdgeTime+ MARGINTICS;
				} else {
					servoCycleStart += servoCycleTics;
				}
				edgeTime = 0;
				//CLR_TP2;
            }
        }
        //CLR_TP2; // Oszimessung Dauer der ISR-Routine OFF
    } else { // ===================   Pulse ON - time ==========================================
        //SET_TP2; // Oszimessung Dauer der ISR-Routine ON
        //if ( pulseP == lastServoDataP ) SET_TP3;
        // look for next pulse to start
        // do we know the next pulse already?
        if ( nextPulseLength > 0 ) {
            // yes we know, start this pulse and then look for next one
            servoCmp_t tmpTCNT1= actEdgeTime; // time of this edge
            if ( nextPulseP->on && (nextPulseP->offcnt+nextPulseP->noAutoff) > 0 ) {
                // its a 'real' pulse, set output pin
                //CLR_TP1;
                #ifdef FAST_PORTWRT
                *nextPulseP->portAdr |= nextPulseP->bitMask;
                #else
                digitalWrite( nextPulseP->pin, HIGH );
                #endif
            }
            //SET_TP3;
            // the 'nextPulse' we have started now, is from now on the 'activePulse', the running activPulse is now the
            // pulse to stop next.
            stopPulseP = activePulseP; // because there was a 'nextPulse' there is also an 'activPulse' which is the next to stop
            edgeTime = activePulseOff;
            activePulseP = nextPulseP;
            activePulseOff = activePulseP->ist/INC_PER_TIC + tmpTCNT1; // end of actually started pulse
            nextPulseLength = 0;
            //SET_TP1;
        }
        if ( searchNextPulse() ) {
            // found a pulse
            if ( activePulseOff == 0 ) {
                // it is the first pulse in the sequence, start it
                //TOG_TP2;
                //SET_TP3;
                activePulseP = pulseP; 
                //3.0 activePulseOff = pulseP->ist/INC_PER_TIC + (GET_COUNT - 4); // compensate for computing time
                activePulseOff = pulseP->ist/INC_PER_TIC + actEdgeTime; //
                if ( pulseP->on && (pulseP->offcnt+pulseP->noAutoff) > 0 ) {
                    // its a 'real' pulse, set output pin
                    #ifdef FAST_PORTWRT
                    *pulseP->portAdr |= pulseP->bitMask;
                    #else
                    digitalWrite( pulseP->pin, HIGH );
                    #endif
                }
                //int32_t tmpTCNT1 = actEdgeTime+ MARGINTICS/2;
                servoCmp_t tmpTCNT1 = actEdgeTime+ MARGINTICS;///2;
                //SET_TP3;
                // look for second pulse
                //SET_TP4;
                pulseP = pulseP->prevServoDataP;
                //CLR_TP4;
                if ( searchNextPulse() ) {
                    // there is a second pulse - this is the 'nextPulse'
                    nextPulseLength = pulseP->ist/INC_PER_TIC;
                    nextPulseP = pulseP;
                    //SET_TP4;
                    pulseP = pulseP->prevServoDataP;
                    //CLR_TP4;
                    // set Starttime for 2. pulse in sequence
                    //edgeTime = max ( (long)((long)activePulseOff + (long) MARGINTICS - (long) nextPulseLength), tmpTCNT1  );
					if ( nextPulseLength > activePulseOff +  2*MARGINTICS ) edgeTime = tmpTCNT1;
                    else edgeTime = max ( (activePulseOff +  2*MARGINTICS -  nextPulseLength), tmpTCNT1  ); //V3
                } else {
                    // no next pulse, there is only one pulse
                    edgeTime = activePulseOff;
                    activePulseOff = 0;
                    stopPulseP = activePulseP;
                    IrqType = POFF;
                }
                //CLR_TP3;
            } else {
                // its a pulse in sequence, so this is the 'nextPulse'
                nextPulseLength = pulseP->ist/INC_PER_TIC;
                nextPulseP = pulseP;
                //SET_TP4;
                pulseP = pulseP->prevServoDataP;
                //CLR_TP4;
                IrqType = POFF;
            }
        } else {
            // found no pulse, so the last one is running or no pulse at all
            
            if ( activePulseOff == 0 ) {
                // all pulses completetd or there wasn't any pulse, restart
                pulseP = lastServoDataP;
                nextPulseLength = 0;
                servoCycleStart += servoCycleTics;
				edgeTime = 0; // start a new 20ms periode
            } else {
                // is last pulse, don't start a new one, only stp the current one
                IrqType = POFF;
            }
        }
        //CLR_TP2; CLR_TP3; // Oszimessung Dauer der ISR-Routine ON
    } //end of 'pulse ON'
	setServoCmpAS(edgeTime+servoCycleStart);	// set Servo-compare register
    //CLR_TP1; CLR_TP3; // Oszimessung Dauer der ISR-Routine
    //CLR_TP2;
}

uint8_t MoToServo::attach(byte pinArg) {
    return attach( pinArg, MINPULSEWIDTH, MAXPULSEWIDTH, false );
}

uint8_t MoToServo::attach(byte pinArg, bool autoOff ) {
    return attach( pinArg, MINPULSEWIDTH, MAXPULSEWIDTH, autoOff );
}

uint8_t MoToServo::attach(byte pinArg, uint16_t pmin, uint16_t pmax ) {
    return attach( pinArg, pmin, pmax, false );
}

uint8_t MoToServo::attach( byte pinArg, uint16_t pmin, uint16_t pmax, bool autoOff ) {
    // return false if already attached or too many servos
    DB_PRINT("Servoattach: pwmNbr=%d, servoIx=%d, Pin=%d", _servoData.pwmNbr, _servoData.servoIx, pinArg );
    if ( _servoData.pwmNbr >= 0  ||  _servoData.servoIx >= MAX_SERVOS ) return 0;
    #ifdef ESP8266 // check pinnumber
        if ( pinArg >15 || gpioUsed(pinArg ) ) return 0;
        setGpio(pinArg);    // mark pin as used
    #endif   
    // set pulselength for angle 0 and 180
    _minPw = constrain( pmin, MINPULSEWIDTH, MAXPULSEWIDTH );
    _maxPw = constrain( pmax, MINPULSEWIDTH, MAXPULSEWIDTH );
	//DB_PRINT( "pin: %d, pmin:%d pmax%d autoOff=%d", pinArg, pmin, pmax, autoOff);
    
    // intialize objectspecific data
    _lastPos = 1500*TICS_PER_MICROSECOND*INC_PER_TIC ;    // initalize to middle position
    _servoData.soll = INVALID;  // invalid position -> no pulse output
    _servoData.ist = INVALID;   
    _servoData.inc = 8000;  // means immediate movement
    _servoData.pin = pinArg;
    _servoData.on = false;  // create no pulses until next write
    _servoData.noAutoff = autoOff?0:1 ;  
    #ifdef FAST_PORTWRT
    // compute portaddress and bitmask related to pin number
    _servoData.portAdr = portOutputRegister(digitalPinToPort(pinArg));
    _servoData.bitMask = digitalPinToBitMask(pinArg);
    //DB_PRINT( "Idx: %d Portadr: 0x%x, Bitmsk: 0x%x", _servoData.servoIx, _servoData.portAdr, _servoData.bitMask );
	#endif
    pinMode (_servoData.pin,OUTPUT);
    digitalWrite( _servoData.pin,LOW);
    _servoData.pwmNbr = 0; // >= 0 means 'successfully attached' on all architectures ( maybe ocerriten later in this function )
    #ifdef ESP8266
        // assign an ISR to the pin
        gpioTab[gpio2ISRx(_servoData.pin)].MoToISR = (void (*)(void*))ISR_Servo;
        gpioTab[gpio2ISRx(_servoData.pin)].IsrData = &_servoData;
        attachInterrupt( _servoData.pin, gpioTab[gpio2ISRx(_servoData.pin)].gpioISR, FALLING );
    #elif defined HAS_PWM_HW // ( ESP32 and RP2040/RP3250 so far )
        // pwmNbr will be negative if there are no free pwm channels
        _servoData.pwmNbr =  servoPwmSetup( &_servoData );
        //DB_PRINT("pwmNbr=%d, Pin=%d", _servoData.pwmNbr, _servoData.pin );
        
    #else // create servo pulses in timer ISR
		//DB_PRINT("Init Timer");
        seizeTimerAS();
		//DB_PRINT("Timer initialized");
        // initialize servochain pointer and ISR if not done already
        noInterrupts();
        if ( pulseP == NULL ) {
            pulseP = lastServoDataP;
            enableServoIsrAS();
        }
         interrupts();
    #endif // no ESP8266
    //DB_PRINT("OVLMARGIN=%d, OVL_TICS=%d, MARGINTICS=%d, SPEEDRES=%d, TPM4=%d", (int16_t) OVLMARGIN, (int16_t)OVL_TICS, (int16_t)MARGINTICS, (int16_t)INC_PER_TIC, (int)(TICS_PER_MICROSECOND*4) );
    //return ( _servoData.pwmNbr >= 0 );
    return ( _servoData.pwmNbr +1 );
}
